@@ -12,6 +12,7 @@ Version 1.0.10 to be released
 - Bug #584: CAutoComplete API was missing a fact (pestaa)
 - Bug #596: CActiveFinder undefined $parent variable on line 1297 (Qiang)
 - Bug: Fixed a bug in Oracle driver when performing relational AR queries (Qiang)
+- Bug: Fixed the problem of executing an SQL using CDbCommand may cause subsequent SQL executions to fail (Qiang)
 - Enh #571: Enhanced CDbCriteria by adding several methods to help building common query conditions (Qiang)
 - Enh #585: Added CChainedCacheDependency::setDependencies() (Qiang)
 - Enh #598: Added CCaptchaAction::transparent (Qiang)
